frontdoor/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontdoor
  namespace: default
spec:
  type: LoadBalancer
  selector:
    name: frontdoor
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 80
    name: https
