frontdoor/frontdoor.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-ingress
  namespace: default
spec:
  type: LoadBalancer
  selector:
    name: lab-ingress
  ports:
  - port: 80
    targetPort: 80
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: argo.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-lb
            port:
              number: 80
  - host: test.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-test-2
            port:
              number: 80
