frontdoor/grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Grafana"
    gethomepage.dev/description: "Metrics dashboards"
    gethomepage.dev/group: "Cluster"
    gethomepage.dev/icon: "grafana.png"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: external
  tls:
    - hosts:
        - grafana.home.chrisscotmartin.com
      secretName: grafana-tls
  rules:
    - host: grafana.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-grafana
                port:
                  number: 80
    - host: grafana.home.chrisscotmartin.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: observability-grafana
                port:
                  number: 80
